--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  budget: 9.99
+  name: Food
 
 two:
-  name: MyString
-  budget: 9.99
+  name: Transport
